# eva-voice-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: demo_ingest.py  test_rag.py
src/voice_bot/: __init__.py  agent.py  agent_realtime.py  config.py
src/voice_bot/api/: __init__.py  app.py
src/voice_bot/api/routers/: __init__.py  auth.py  customers.py  documents.py  realtime.py  sessions.py  voice_ws.py
src/voice_bot/models/: __init__.py  customer.py  session.py  user.py
src/voice_bot/rag/: __init__.py  ingest.py  retriever.py
src/voice_bot/services/: __init__.py  daily_service.py
src/voice_bot/static/: cheap.html  dashboard.html  index.html
tests/: __init__.py
